build executable jar that support java17